<resources>
    <string name="app_name">LoginFormApplication</string>
    <string name="login">Login Form</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">SUBMIT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="show_password">Show Password</string>
</resources>