<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutId"
        android:layout_width="326dp"
        android:layout_height="422dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            app:passwordToggleEnabled="true"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="MissingPrefix" />

        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#FFFFFF"
            android:text="@string/submit"
            app:backgroundTint="#673AB7" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>